# NoC-HR

./: CMakeLists.txt  NoC_core.cpp  README.md
src/: NoC_core.cpp  NoC_core.h  NoC_visualization.py  pybind11_module.cpp
test/: pybind_test.py  test_noc_initialization.cpp  test_routing_and_congestion.cpp  test_traffic_generation.cpp
